# ptMgrad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.cpp  example.cpp  model.cpp  model_array.cpp  model_complex.cpp  model_pytorch.py
src/: Array.h  complex.cpp  complex.h  engine.cpp  engine.h  main.cpp  nn.cpp  nn.h
test/: demo.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp  demo6.cpp  example.cpp  example_complex.cpp  example_complex_2.cpp  main.cpp  test_activation_funcs.cpp  test_array.cpp  test_comparison_ops.cpp  test_complex_maths_ops.cpp  test_complex_ops.cpp  test_composite_operations.cpp  test_maths_ops.cpp  test_ops.cpp  test_unary_ops.cpp
